re PR middle-end/26004 (gcc errors on valid code [SVO])

PR c/26004
        * gimplify.c (gimplify_modify_expr_rhs): Don't do return slot opt if
        the target was declared 'register'.

From-SVN: r111947